# quadifier

./: .gitignore
quadifier/: CMakeLists.txt
quadifier/win32/: quadifier.vcxproj
quadifier/win32/common/: DLLInject.cpp
quadifier/win32/module/: module.vcxproj
quadifier/win32/source/: main.cpp
